# no_trait_sample2

./: Cargo.toml  README.md
src/: main.rs
