[package]
name = "no_trait_sample2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }


[features]
default = ["cat"]
cat = []
dog = []